@startuml Class_Diagram
' ============================================================================
' CLASS DIAGRAM - SISTEM INFORMASI KEDISIPLINAN SISWA SMK NEGERI 1
' ============================================================================
' Author: System Documentation
' Version: 2.0 (PlantUML)
' Date: 27 Desember 2024
' ============================================================================

' === GLOBAL STYLING ===
skinparam backgroundColor #FEFEFE
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 10
skinparam linetype ortho

' === CLASS STYLING ===
skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #37474F
    ArrowColor #455A64
    FontColor #212121
    AttributeFontColor #424242
    StereotypeFontColor #757575
    HeaderBackgroundColor #ECEFF1
    BorderThickness 1.5
}

' === PACKAGE STYLING ===
skinparam package {
    BackgroundColor #F5F5F5
    BorderColor #9E9E9E
    FontColor #424242
    BorderThickness 1
}

' === NOTE STYLING ===
skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #FBC02D
}

' ============================================================================
' PACKAGE: USER MANAGEMENT
' ============================================================================

package "User Management" as PKG_USER #E3F2FD {
    
    class Role {
        - id : bigint <<PK>>
        - nama_role : string
        --
        + users() : HasMany<User>
        + findByName(string name) : Role
    }
    
    class User {
        - id : bigint <<PK>>
        - role_id : bigint <<FK>>
        - nama : string
        - username : string
        - email : string
        - password : string
        - phone : string
        - nip : string
        - nuptk : string
        - is_active : boolean
        - last_login_at : timestamp
        --
        + role() : BelongsTo<Role>
        + jurusanDiampu() : HasOne<Jurusan>
        + kelasDiampu() : HasOne<Kelas>
        + anakWali() : HasMany<Siswa>
        + hasRole(string role) : bool
        + isTeacher() : bool
        + isWaliKelas() : bool
        + isKaprodi() : bool
        + canViewStudent(Siswa s) : bool
    }
    
    Role "1" --> "*" User : has >
}

' ============================================================================
' PACKAGE: SCHOOL STRUCTURE
' ============================================================================

package "School Structure" as PKG_SCHOOL #E8F5E9 {
    
    class Jurusan {
        - id : bigint <<PK>>
        - kaprodi_user_id : bigint <<FK>>
        - nama_jurusan : string
        - kode_jurusan : string
        --
        + kaprodi() : BelongsTo<User>
        + kelas() : HasMany<Kelas>
        + siswa() : HasManyThrough<Siswa>
    }
    
    class Kelas {
        - id : bigint <<PK>>
        - jurusan_id : bigint <<FK>>
        - wali_kelas_user_id : bigint <<FK>>
        - nama_kelas : string
        - tingkat : string
        --
        + jurusan() : BelongsTo<Jurusan>
        + waliKelas() : BelongsTo<User>
        + siswa() : HasMany<Siswa>
    }
    
    class Siswa {
        - id : bigint <<PK>>
        - kelas_id : bigint <<FK>>
        - wali_murid_user_id : bigint <<FK>>
        - nisn : string
        - nama_siswa : string
        - nomor_hp_wali_murid : string
        - alasan_keluar : string
        - deleted_at : timestamp
        --
        + kelas() : BelongsTo<Kelas>
        + waliMurid() : BelongsTo<User>
        + riwayatPelanggaran() : HasMany
        + tindakLanjut() : HasMany
        + getTotalPoinAttribute() : int
    }
    
    Jurusan "1" --> "*" Kelas : has >
    Kelas "1" --> "*" Siswa : has >
}

' === RELASI USER KE SCHOOL STRUCTURE ===
User "1" ..> "0..1" Jurusan : kaprodi >
User "1" ..> "0..1" Kelas : waliKelas >
User "1" ..> "*" Siswa : waliMurid >

' ============================================================================
' PACKAGE: VIOLATION SYSTEM
' ============================================================================

package "Violation System" as PKG_VIOLATION #FFF3E0 {
    
    class KategoriPelanggaran {
        - id : bigint <<PK>>
        - nama_kategori : string
        - tingkat_keseriusan : enum
        --
        + jenisPelanggaran() : HasMany
        + getColorAttribute() : string
        + getIconAttribute() : string
    }
    
    class JenisPelanggaran {
        - id : bigint <<PK>>
        - kategori_id : bigint <<FK>>
        - nama_pelanggaran : string
        - poin : int
        - has_frequency_rules : boolean
        - is_active : boolean
        - filter_category : string
        - keywords : string
        --
        + kategoriPelanggaran() : BelongsTo
        + riwayatPelanggaran() : HasMany
        + frequencyRules() : HasMany
        + usesFrequencyRules() : bool
        + getDisplayPoin() : string
        + isRecordable() : bool
    }
    
    class PelanggaranFrequencyRule {
        - id : bigint <<PK>>
        - jenis_pelanggaran_id : bigint <<FK>>
        - frequency_min : int
        - frequency_max : int
        - poin : int
        - sanksi_description : text
        - trigger_surat : boolean
        - pembina_roles : json
        - display_order : int
        --
        + jenisPelanggaran() : BelongsTo
        + matchesFrequency(int n) : bool
        + getSuratType() : string
    }
    
    class RiwayatPelanggaran {
        - id : bigint <<PK>>
        - siswa_id : bigint <<FK>>
        - jenis_pelanggaran_id : bigint <<FK>>
        - guru_pencatat_user_id : bigint <<FK>>
        - tanggal_kejadian : date
        - keterangan : text
        - bukti_foto_path : string
        - deleted_at : timestamp
        --
        + siswa() : BelongsTo<Siswa>
        + jenisPelanggaran() : BelongsTo
        + guruPencatat() : BelongsTo<User>
    }
    
    KategoriPelanggaran "1" --> "*" JenisPelanggaran : has >
    JenisPelanggaran "1" --> "*" PelanggaranFrequencyRule : has >
    JenisPelanggaran "1" --> "*" RiwayatPelanggaran : recorded >
}

' === RELASI VIOLATION KE ENTITIES ===
Siswa "1" --> "*" RiwayatPelanggaran : has >
User "1" ..> "*" RiwayatPelanggaran : records >

' ============================================================================
' PACKAGE: FOLLOW-UP SYSTEM
' ============================================================================

package "Follow-up System" as PKG_FOLLOWUP #FCE4EC {
    
    enum StatusTindakLanjut {
        BARU
        MENUNGGU_PERSETUJUAN
        DISETUJUI
        DITOLAK
        DITANGANI
        SELESAI
    }
    
    class TindakLanjut {
        - id : bigint <<PK>>
        - siswa_id : bigint <<FK>>
        - pemicu : text
        - sanksi_deskripsi : text
        - pembina_roles : json
        - denda_deskripsi : text
        - status : StatusTindakLanjut
        - tanggal_tindak_lanjut : date
        - penyetuju_user_id : bigint <<FK>>
        - ditangani_oleh_user_id : bigint <<FK>>
        - ditangani_at : timestamp
        - diselesaikan_oleh_user_id : bigint <<FK>>
        - diselesaikan_at : timestamp
        --
        + siswa() : BelongsTo<Siswa>
        + penyetuju() : BelongsTo<User>
        + suratPanggilan() : HasOne
        + ditanganiOleh() : BelongsTo<User>
        + diselesaikanOleh() : BelongsTo<User>
        + scopePendingApproval() : Builder
        + scopeForPembina(string role) : Builder
    }
    
    class SuratPanggilan {
        - id : bigint <<PK>>
        - tindak_lanjut_id : bigint <<FK>>
        - nomor_surat : string
        - tipe_surat : string
        - pembina_data : json
        - pembina_roles : json
        - tanggal_surat : date
        - tanggal_pertemuan : date
        - waktu_pertemuan : string
        - tempat_pertemuan : string
        - keperluan : text
        - file_path_pdf : string
        --
        + tindakLanjut() : BelongsTo
        + printLogs() : HasMany
        + getPrintCountAttribute() : int
    }
    
    class SuratPanggilanPrintLog {
        - id : bigint <<PK>>
        - surat_panggilan_id : bigint <<FK>>
        - user_id : bigint <<FK>>
        - printed_at : timestamp
        - ip_address : string
        - user_agent : string
        --
        + suratPanggilan() : BelongsTo
        + user() : BelongsTo<User>
    }
    
    TindakLanjut --> StatusTindakLanjut : uses >
    TindakLanjut "1" --> "0..1" SuratPanggilan : has >
    SuratPanggilan "1" --> "*" SuratPanggilanPrintLog : has >
}

' === RELASI FOLLOWUP KE ENTITIES ===
Siswa "1" --> "*" TindakLanjut : has >

' ============================================================================
' PACKAGE: COACHING SYSTEM
' ============================================================================

package "Coaching System" as PKG_COACHING #E8EAF6 {
    
    enum StatusPembinaan {
        PERLU_PEMBINAAN
        SEDANG_DIBINA
        SELESAI
    }
    
    class PembinaanInternalRule {
        - id : bigint <<PK>>
        - poin_min : int
        - poin_max : int
        - pembina_roles : json
        - keterangan : text
        - display_order : int
        --
        + matchesPoin(int totalPoin) : bool
        + getRangeText() : string
    }
    
    class PembinaanStatus {
        - id : bigint <<PK>>
        - siswa_id : bigint <<FK>>
        - pembinaan_rule_id : bigint <<FK>>
        - total_poin_saat_trigger : int
        - range_text : string
        - keterangan_pembinaan : text
        - pembina_roles : json
        - status : StatusPembinaan
        - dibina_oleh_user_id : bigint <<FK>>
        - dibina_at : timestamp
        - diselesaikan_oleh_user_id : bigint <<FK>>
        - selesai_at : timestamp
        - catatan_pembinaan : text
        - hasil_pembinaan : text
        --
        + siswa() : BelongsTo<Siswa>
        + rule() : BelongsTo
        + dibinaOleh() : BelongsTo<User>
        + mulaiPembinaan(int userId) : bool
        + selesaikanPembinaan(int userId, string hasil) : bool
    }
    
    PembinaanStatus --> StatusPembinaan : uses >
    PembinaanInternalRule "1" --> "*" PembinaanStatus : triggers >
}

' === RELASI COACHING KE ENTITIES ===
Siswa "1" --> "*" PembinaanStatus : has >

' ============================================================================
' PACKAGE: SETTINGS
' ============================================================================

package "Settings" as PKG_SETTINGS #EFEBE9 {
    
    class RulesEngineSetting {
        - id : bigint <<PK>>
        - key : string
        - value : string
        - label : string
        - description : text
        - category : string
        - data_type : string
        --
        + histories() : HasMany
        + {static} getValue(string key, mixed default) : mixed
        + {static} setValue(string key, mixed value, int userId) : bool
    }
    
    class RulesEngineSettingHistory {
        - id : bigint <<PK>>
        - setting_id : bigint <<FK>>
        - old_value : string
        - new_value : string
        - changed_by : bigint <<FK>>
        - created_at : timestamp
        --
        + setting() : BelongsTo
        + user() : BelongsTo<User>
    }
    
    RulesEngineSetting "1" --> "*" RulesEngineSettingHistory : has >
}

' ============================================================================
' LEGEND
' ============================================================================

legend right
  <b>LEGENDA</b>
  ----
  <b>Visibility:</b>
  + public
  - private
  # protected
  ----
  <b>Relasi:</b>
  ──► Association
  ──▶ Composition
  ..► Dependency
  ----
  <b>Total: 16 Models</b>
endlegend

@enduml
